[package]
name = "lig-rs"
version = "1.0.0"
authors = ["<tuanvy860@gmail.com>"]
edition = "2024"
description = "lig is a multipattern regex matching tool"
license = "MIT"

homepage = "https://github.com/ngtv2409/lig"
repository = "https://github.com/ngtv2409/lig"

[dependencies]
regex = "1"
clap = { version = "4.3", features = ["derive"] }
colored = "2"
anyhow = "1.0"
once_cell = "1.21.3"
indexmap = "2.12.1"
